<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.studyjams.s1.sj49.wuyan.MainActivity"
    android:background="#E0E0E0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <Button
            style="@style/button_title"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:onClick="toContentActivity"
            android:tag="@string/thing_1_title"
            android:text="@string/thing_1_title" />

        <Button
            android:id="@+id/thing_2"
            style="@style/button_title"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:onClick="toContentActivity"
            android:tag="@string/thing_2_title"
            android:text="@string/thing_2_title" />

        <Button
            android:id="@+id/thing_3"
            style="@style/button_title"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:onClick="toContentActivity"
            android:tag="@string/thing_3_title"
            android:text="@string/thing_3_title" />

        <Button
            android:id="@+id/thing_4"
            style="@style/button_title"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:onClick="toContentActivity"
            android:tag="@string/thing_4_title"
            android:text="@string/thing_4_title" />

        <Button
            android:id="@+id/thing_5"
            style="@style/button_title"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:onClick="toContentActivity"
            android:tag="@string/thing_5_title"
            android:text="@string/thing_5_title" />


    </LinearLayout>
</ScrollView>

